--- a/readme.me
+++ b/readme.me
@@ -1,3 +1,5 @@
+# Conformal active learning
+
 This repository contains first toy experiments to illlustrate the behaviour of Conformal Prediction (CP) different machine learning tasks. 
 The first scripts allows to compare marginal, Mondrian and selection-conditional set-valued inference.
 Learning curves of black-box models can be extracted.
